--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <canvas class="game" id="ctx" width=500 height=500 style="border:1px solid #000000;"></canvas>
         <p>The tutorial I wached was by<a href="https://www.youtube.com/@ScriptersWar"> this youtube chanel</a></p>
         </div>
-        <div class="invis-div"></div>
+        <div class="invis-div">
+            <p>I don't know if this works or not... Will fix eventually </p>
+            <input type="text" class="comment" id=name form="comment">Name (If you want to):</input>
+            <br>
+            <textarea required class="comment" id="comment" form="comment" type="Text">feedback</textarea>
+            <input class="comment" type="submit"></input>
+        </div>
     <body>
 <script src='script.js'></script>
 
